Add keywords to package.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@organicdesign/crdt-protocols",
   "version": "0.1.0",
   "description": "Protocols for encoding and decoding CRDT data.",
+  "keywords": ["crdt", "protobuf", "protocol"],
   "type": "module",
   "exports": {
     "./*": {
